# DualNumber

./: CMakeLists.txt  LICENSE.txt  build.sh
src/: CMakeLists.txt
src/dual_number/: dual_number.hpp
test/: CMakeLists.txt  test.cpp
